fix header menu broken issue on mobile devices

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -401,9 +401,7 @@ body.main .logo a img, .footer-logo a img {width: 55px;}
 .sing-up form input[type="submit"] {margin: 40px auto 0;font-size: 20px;min-width: 100%;}
 .promo-area {padding: 0 0 15px;}
 
-
-
-.profile-link {position: relative;right: 0;top: -20px;width: 100%;margin: auto;text-align: center;}
+.profile-link {margin-top: 25px;}
 .logo {padding: 0;margin: 0;}
 .dash-post-content {width: 100%;}
 .dash-post-single-comment-form {width: 423px;}
@@ -457,12 +455,12 @@ body.main .logo a img, .footer-logo a img {width: 55px;}
 .feedback-form form textarea {padding: 10px;height: 100px;border-radius: 5px;}
 .feedback-form form::before {width: 65px;height: 60px;bottom: -60px;right: 55px;}
 .feedback-form form h2 {font-size: 15px;}
-.profile-bar {margin-bottom: 0;margin-top: 5px;margin-right: 0;}
+.profile-bar {margin-bottom: 0;margin-right: 40%;}
 .diamond {margin: 10px 0 0 -2px;}
 .diamonds {left: 50%;top: -5px;margin-left: -105px;}
 .feedback-form {display: none;}
-.profile-link .dropdown-menu {top: 60px;left: 50%;margin-left: -85px;}
-.profile-link a {margin-left: 0;width: 100%;display: block;margin-top: 23px;height: auto;margin-bottom: 10px;}
+.profile-link .dropdown-menu {top: 50px;margin-left: -23px;}
+.profile-link a {height: auto;}
 .dashboard-header-area .dropdown-menu a {font-size: 14px;}
 .profile-bar ul li button {margin: 0 10px;}
 .dashboard-header-area {position: relative;}
